# dazzle-tree-lib

./: .gitignore  .gitkeep  .repokit.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  commit_message.txt  full_test_results.txt  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test_final_validation.py  test_results.txt  test_results_timeout.txt
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: dev.yml  main.yml  release.yml  tests.yml
benchmarks/: README.md  accurate_performance_test.py  compare_file_search.py
dazzletreelib/: __init__.py  api.py  config.py  version.py
dazzletreelib/_common/: __init__.py
dazzletreelib/aio/: __init__.py  api.py  error_handling.py  error_policies.py  planning.py
dazzletreelib/aio/adapters/: __init__.py  _cache_store.py  cache_completeness_adapter.py  depth_tracking_adapter.py  fast_filesystem.py  filesystem.py  filtering.py  smart_caching.py  (+1 more)
dazzletreelib/asynch/: __init__.py  async_core.py
dazzletreelib/core/: __init__.py
dazzletreelib/sync/: __init__.py  config.py  planning.py
dazzletreelib/testing/: __init__.py  fixtures.py
docs/: README.md  adapter-development.md  api-reference.md  architecture.md  caching-basics.md  caching.md  comparison.md  getting-started.md  node-tracking-optimization.md  optional-oom-protection.md  performance-testing-guide.md  performance.md  sync-async-compatibility.md  universal-adapters.md
docs/design-patterns/: adapter-pattern-guide.md  composition-vs-inheritance.md
examples/: README.md  basic_async.py  depth_tracking_demo.py  folder_datetime_fix.py  folder_datetime_integration.py  sync_vs_async.py
examples/adapters/: git_tree_adapter.py
private/claude/: 2025-08-31__02-15-15__merge-treelib-to-dazzletreelib.md
scripts/: get-coverage.py  install-hooks.sh  test-ci.py  update-version.sh
scripts/hooks/: pre-commit  pre-push
tests/: benchmark_caching.py  benchmark_fast_adapter.py  test_aio_core.py  test_async_generator_errors.py  test_basic_traversal.py  test_cache_bypass.py  test_cache_collision_prevention.py  test_cache_critical_bugs_fixed.py  test_cache_invalidation.py  test_cache_store.py  test_caching_adapter.py  test_collectors.py  test_depth_tracking.py  test_documentation_examples.py  test_edge_cases.py  test_error_handling.py  test_filesystem_adapter.py  test_integration.py  test_introspection.py  test_issue_15_event_loop_fix.py  test_issue_16_error_propagation.py  test_issue_17_integer_depth.py  test_issue_18_cache_invalidation.py  test_issue_20_data_corruption_prevented.py  test_issue_21_cache_memory_limits.py  test_issue_29_performance_measurement.py  test_issue_29_performance_optional_safety.py  test_issue_29_performance_realistic.py  test_issue_30_node_tracking_investigation.py  test_issue_40_tracking_semantics.py  test_new_adapters.py  test_node_tracking_regression.py  test_optimization_suite.py  test_performance.py  test_performance_async.py  test_smart_caching_adapter.py  test_stat_caching.py  test_tracking_error_integration.py  test_tracking_filter_integration.py  test_tracking_mode_switching.py  (+3 more)
tests/POC/: test_bug_demonstrations.py  test_cache_critical_bugs_original.py
tests/_common/: __init__.py  test_contracts.py
tests/diagnostics/: README.md  diagnose_cache_hit_performance.py  diagnose_measurement_swap.py  diagnose_path_tracking.py  diagnose_performance.py  diagnose_performance_multi.py  diagnose_state_contamination.py
tests/one-offs/: benchmark_refactor.py  test-github-actions.py  test_diagnose_performance.py  test_fast_mode_simple.py  test_fast_mode_tracking.py  test_final_validation.py  test_isolated_performance.py  test_performance_debug.py  test_performance_with_cooldown.py  test_proposed_fix.py  test_timing_stability.py  test_was_exposed_concept.py
(+21 files in other folders)
